# gemseo-mma

./: .copier-answers.yml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CHANGELOG.rst  CREDITS.md  CREDITS.rst  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
docs/: licenses.md
examples/: analytic_example.ipynb
public/: versions.json
public/2.0.2/: index.html  objects.inv
public/2.0.2/credits/: index.html
public/2.0.2/reference/gemseo_mma/: index.html
public/2.0.2/reference/gemseo_mma/opt/core/: index.html
public/2.0.2/reference/gemseo_mma/opt/core/mma/: index.html
public/2.0.2/reference/gemseo_mma/opt/core/mma_optimizer/: index.html
public/2.0.2/reference/gemseo_mma/opt/lib_mma/: index.html
public/2.0.2/search/: search_index.json
public/2.0.2/user_guide/: index.html
public/3.0.0/: index.html  sitemap.xml
public/3.0.0/credits/: index.html
public/3.0.0/reference/SUMMARY/: index.html
public/3.0.0/reference/gemseo_mma/opt/: index.html
public/3.0.0/reference/gemseo_mma/opt/core/: index.html
public/3.0.0/reference/gemseo_mma/opt/core/mma_optimizer/: index.html
public/4.0.0/: index.html
public/4.0.0/changelog/: index.html
public/4.0.0/credits/: index.html
public/4.0.0/reference/gemseo_mma/opt/: index.html
public/4.0.0/reference/gemseo_mma/opt/core/mma/: index.html
public/4.0.0/search/: search_index.json
public/develop/: 404.html  index.html  objects.inv  sitemap.xml
public/develop/changelog/: index.html
public/develop/credits/: index.html
public/develop/licenses/: index.html
public/develop/reference/SUMMARY/: index.html
public/develop/reference/gemseo_mma/: index.html
public/develop/reference/gemseo_mma/opt/: index.html
public/develop/reference/gemseo_mma/opt/core/: index.html
public/develop/reference/gemseo_mma/opt/core/mma/: index.html
public/develop/reference/gemseo_mma/opt/core/mma_optimizer/: index.html
public/develop/reference/gemseo_mma/opt/lib_mma/: index.html
public/develop/reference/gemseo_mma/opt/mma/: index.html
public/develop/reference/gemseo_mma/opt/mma_settings/: index.html
public/develop/search/: search_index.json
public/develop/user_guide/: index.html
requirements/: check.txt  dist.txt  doc.txt  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.13.txt  test-python3.7.txt  test-python3.8.txt  test-python3.9.txt
src/gemseo_mma/opt/: _mma_settings.py  lib_mma.py  mma.py
src/gemseo_mma/opt/core/: mma.py  mma_optimizer.py
src/gemseo_mma/opt/options/: MMA_options.json
tests/: test_mma_optimization.py
