[project]
name = "gemseo-mma"
authors = [
    {name = "Simone Coniglio", email = "contact@gemseo.org"}
]
description = "A gemseo wrapper of Python version of Method of Moving Asymptothes in the implementation of Arjen Deetman."
license = {text = "GNU General Public License v3"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
requires-python = ">=3.9, <3.12"
dependencies = [
    "gemseo[all] >=5",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = [
    "covdefaults",
    "pytest <9",
    "pytest-cov",
    "pytest-xdist",
]
doc = [
    "black",
    "griffe-inherited-docstrings",
    "markdown-exec[ansi]",
    "mike",
    "mkdocs-bibtex",
    "mkdocs-gallery",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://gitlab.com/gemseo"
Source = "https://gitlab.com/gemseo/dev/gemseo-mma"
Tracker = "https://gitlab.com/gemseo/dev/gemseo-mma/-/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points]
gemseo_plugins = { gemseo-mma = "gemseo_mma"}

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
license-files = [
    "LICENSE.txt",
    "CREDITS.md",
]
